--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start:consumer": "ts-node src/consumer.ts",
+    "start:producer": "ts-node src/producer.ts"
   },
   "keywords": [],
   "author": "Francisco <franciscopantojag98@gmail.com> (https://franciscopantojag.me/)",
   "license": "ISC",
   "dependencies": {
+    "avsc": "^5.7.3",
+    "node-rdkafka": "^2.12.0",
     "typescript": "^4.5.4"
   },
   "devDependencies": {
